@@ -1,2 +1,3 @@
 - Players can now enter up to gold cap for the Deposit Keep amount.
+- Players can now toggle between active events for the World Event Queue button if there are multiple supported events active simultaneously.
 - Players can now toggle rare scan in the settings. This is complete with a clickable popup and a map ping sound.
